# objectviewer

./: .gitignore  CMakeLists.txt  README.md
inc/: calc.h  fileprocessor.h  input.h  kernelCalc.h  mesh.h  point.h  render.h  renderdata.h  win.h
src/: calc.cpp  fileprocessor.cpp  input.cpp  kernelCalc.cu  main.cpp  mesh.cpp  render.cpp  win.cpp
